--- a/react/src/App.css
+++ b/react/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
